--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@ build:
   docker:
     web: Dockerfile
 run:
-  web: bundle exec rails s -p 3000 -b '0.0.0.0'
+  web: bundle exec puma -C config/puma.rb
